c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_parse/extra_credit/string_literal_goto.c
// You can't use a string literal as a label in a goto statement
int main(void) {
    goto "foo";
    return 0;
}